--- a/Pymaceuticals/main.ipynb
+++ b/Pymaceuticals/main.ipynb
@@ -1175,6 +1175,235 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Timepoint_x</th>\n",
+       "      <th>Tumor Volume (mm3)_x</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "      <th>Timepoint_y</th>\n",
+       "      <th>Tumor Volume (mm3)_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>k403</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>22.050126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>s185</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>23.343598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>x401</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>28.484033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>m601</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>28.430964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>g791</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>29.128472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>580</th>\n",
+       "      <td>x822</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>61.386660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>590</th>\n",
+       "      <td>y163</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>17</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67.685569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>600</th>\n",
+       "      <td>y769</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>6</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>68.594745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>610</th>\n",
+       "      <td>y865</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>23</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>64.729837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>620</th>\n",
+       "      <td>z581</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>62.754451</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>63 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint_x  \\\n",
+       "0       k403     Ramicane    Male          21          16            0   \n",
+       "10      s185    Capomulin  Female           3          17            0   \n",
+       "20      x401    Capomulin  Female          16          15            0   \n",
+       "30      m601    Capomulin    Male          22          17            0   \n",
+       "40      g791     Ramicane    Male          11          16            0   \n",
+       "..       ...          ...     ...         ...         ...          ...   \n",
+       "580     x822     Ceftamin    Male           3          29            0   \n",
+       "590     y163    Infubinol  Female          17          27            0   \n",
+       "600     y769     Ceftamin  Female           6          27            0   \n",
+       "610     y865     Ceftamin    Male          23          26            0   \n",
+       "620     z581    Infubinol  Female          24          25            0   \n",
+       "\n",
+       "     Tumor Volume (mm3)_x  Metastatic Sites  Timepoint_y  Tumor Volume (mm3)_y  \n",
+       "0                    45.0                 0           45             22.050126  \n",
+       "10                   45.0                 0           45             23.343598  \n",
+       "20                   45.0                 0           45             28.484033  \n",
+       "30                   45.0                 0           45             28.430964  \n",
+       "40                   45.0                 0           45             29.128472  \n",
+       "..                    ...               ...          ...                   ...  \n",
+       "580                  45.0                 0           45             61.386660  \n",
+       "590                  45.0                 0           45             67.685569  \n",
+       "600                  45.0                 0           45             68.594745  \n",
+       "610                  45.0                 0           45             64.729837  \n",
+       "620                  45.0                 0           45             62.754451  \n",
+       "\n",
+       "[63 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merge this group df with the original dataframe to get the tumor volume at the last timepoint\n",
+    "first_n_final_tumor = pd.merge(mouse_study_merged, final_tumor_vol_df, on=\"Mouse ID\")\n",
+    "first_n_final_tumor = first_n_final_tumor.loc[first_n_final_tumor[\"Timepoint_x\"] == 0]\n",
+    "first_n_final_tumor"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
